--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,13 @@ name = "ambient-auction-api"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate-type = ["cdylib", "lib"]
+
 [dependencies]
 bytemuck = { version = "1", features = ["derive", "const_zeroed"] }
 num_enum = "0.7.5"
-five8_const = "0.1.3"
+five8_const = "1.0.0"
 base64 = { version = "0.22", optional = true }
 bs58 = { version = "0.5.1", optional = true }
 hex = { version = "0.4.3", optional = true }
